# FMAGJ

./: .gitattributes  .gitignore  README.md  requirements.txt  setup.cfg
benchmark/conversion/: objects_single_json_to_csv.py
benchmark/core/mlflow_handler/: base.py  handler.py  logger.py  mode.py  version.py
benchmark/core/model/: base_model.py  bounding_box.py  class_mask.py  image.py  text_chunker.py  text_embedder.py
benchmark/data_examples/object_detections/: forced_filenames.txt
benchmark/data_examples/texts/: model_result.csv
benchmark/dataset/: base.py  base_object_detection.py  detected_object_info.py  image_captioning.py  images.py  object_counts.py  object_detection.py  passthrough_ground_truth.py
benchmark/evaluator/: base.py  factory.py  mean.py
benchmark/logger/: factory.py
benchmark/metric/: base.py  metric_input.py
benchmark/metric/consistency/: base.py
benchmark/metric/ground_truth/: base.py
benchmark/preprocessing/: base.py  image.py  object_count.py  object_detection.py  text.py
benchmark/sample/: sample.py
benchmark/scripts/: calculate_image_captioning_metrics.py  calculate_object_count_metrics.py  calculate_object_detection_metrics.py  calculate_semantic_segmentation_metrics.py  convert_detected_objects_json_to_csv.py
benchmark/task/: base.py  image_captioning.py  object_counting.py  object_detection.py  semantic_segmentation.py
data/: README.md
data/HUMAN__gap_junctions/10a8020e/: asset_metadata.json
scripts/: conversion.py  conversion_bbox2csv.py  inference.py  split_assets.py  train.py  train_pipeline.py
(+1260 files in other folders)
