[metadata]
name = fmagj
version = 0.1.0
description = Tools to support FMAGJ dataset paper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mdi-bbm/FMAGJ
license = Apache-2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
where = .
